--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "@kubernetes/client-node": "^0.18.1",
+    "aws-sdk": "^2.1467.0",
     "bcrypt-nodejs": "^0.0.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -20,7 +21,7 @@
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "mongodb": "^5.7.0",
-    "mongoose": "^7.6.7"
+    "mongoose": "^7.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
